--- a/net/mac80211/Kconfig
+++ b/net/mac80211/Kconfig
@@ -88,16 +88,10 @@ config MAC80211_DEBUGFS
 
 	  Say N unless you know you need this.
 
-menuconfig MAC80211_DEBUG_MENU
-	bool "Select mac80211 debugging features"
-	depends on MAC80211
-	---help---
-	  This option collects various mac80211 debug settings.
-
 config MAC80211_DEBUG_PACKET_ALIGNMENT
 	bool "Enable packet alignment debugging"
-	depends on MAC80211_DEBUG_MENU
-	---help---
+	depends on MAC80211
+	help
 	  This option is recommended for driver authors and strongly
 	  discouraged for everybody else, it will trigger a warning
 	  when a driver hands mac80211 a buffer that is aligned in
@@ -106,95 +100,33 @@ config MAC80211_DEBUG_PACKET_ALIGNMENT
 
 	  Say N unless you're writing a mac80211 based driver.
 
-config MAC80211_NOINLINE
-	bool "Do not inline TX/RX handlers"
-	depends on MAC80211_DEBUG_MENU
+config MAC80211_DEBUG
+	bool "Enable debugging output"
+	depends on MAC80211
 	---help---
-	  This option affects code generation in mac80211, when
-	  selected some functions are marked "noinline" to allow
-	  easier debugging of problems in the transmit and receive
-	  paths.
+	  This option will enable debug tracing output for the
+	  ieee80211 network stack.
 
-	  This option increases code size a bit and inserts a lot
-	  of function calls in the code, but is otherwise safe to
-	  enable.
-
-	  If unsure, say N unless you expect to be finding problems
-	  in mac80211.
-
-config MAC80211_VERBOSE_DEBUG
-	bool "Verbose debugging output"
-	depends on MAC80211_DEBUG_MENU
-	---help---
-	  Selecting this option causes mac80211 to print out
-	  many debugging messages. It should not be selected
-	  on production systems as some of the messages are
-	  remotely triggerable.
-
-	  Do not select this option.
+	  If you are not trying to debug or develop the ieee80211
+	  subsystem, you most likely want to say N here.
 
 config MAC80211_HT_DEBUG
-	bool "Verbose HT debugging"
-	depends on MAC80211_DEBUG_MENU
+	bool "Enable HT debugging output"
+	depends on MAC80211_DEBUG
 	---help---
 	  This option enables 802.11n High Throughput features
 	  debug tracing output.
 
-	  It should not be selected on production systems as some
-	  of the messages are remotely triggerable.
+	  If you are not trying to debug of develop the ieee80211
+	  subsystem, you most likely want to say N here.
 
-	  Do not select this option.
-
-config MAC80211_TKIP_DEBUG
-	bool "Verbose TKIP debugging"
-	depends on MAC80211_DEBUG_MENU
-	---help---
-	  Selecting this option causes mac80211 to print out
-	  very verbose TKIP debugging messages. It should not
-	  be selected on production systems as those messages
-	  are remotely triggerable.
-
-	  Do not select this option.
-
-config MAC80211_IBSS_DEBUG
-	bool "Verbose IBSS debugging"
-	depends on MAC80211_DEBUG_MENU
-	---help---
-	  Selecting this option causes mac80211 to print out
-	  very verbose IBSS debugging messages. It should not
-	  be selected on production systems as those messages
-	  are remotely triggerable.
-
-	  Do not select this option.
-
-config MAC80211_VERBOSE_PS_DEBUG
-	bool "Verbose powersave mode debugging"
-	depends on MAC80211_DEBUG_MENU
-	---help---
-	  Selecting this option causes mac80211 to print out very
-	  verbose power save mode debugging messages (when mac80211
-	  is an AP and has power saving stations.)
-	  It should not be selected on production systems as those
-	  messages are remotely triggerable.
-
-	  Do not select this option.
-
-config MAC80211_VERBOSE_MPL_DEBUG
-	bool "Verbose mesh peer link debugging"
-	depends on MAC80211_DEBUG_MENU
-	depends on MAC80211_MESH
-	---help---
-	  Selecting this option causes mac80211 to print out very
-	  verbose mesh peer link debugging messages (when mac80211
-	  is taking part in a mesh network).
-	  It should not be selected on production systems as those
-	  messages are remotely triggerable.
-
-	  Do not select this option.
+config MAC80211_VERBOSE_DEBUG
+	bool "Verbose debugging output"
+	depends on MAC80211_DEBUG
 
 config MAC80211_LOWTX_FRAME_DUMP
 	bool "Debug frame dumping"
-	depends on MAC80211_DEBUG_MENU
+	depends on MAC80211_DEBUG
 	---help---
 	  Selecting this option will cause the stack to
 	  print a message for each frame that is handed
@@ -205,17 +137,33 @@ config MAC80211_LOWTX_FRAME_DUMP
 	  If unsure, say N and insert the debugging code
 	  you require into the driver you are debugging.
 
+config MAC80211_TKIP_DEBUG
+	bool "TKIP debugging"
+	depends on MAC80211_DEBUG
+
 config MAC80211_DEBUG_COUNTERS
 	bool "Extra statistics for TX/RX debugging"
 	depends on MAC80211_DEBUG
-	depends on MAC80211_DEBUG_MENU
-	depends on MAC80211_DEBUGFS
-	---help---
-	  Selecting this option causes mac80211 to keep additional
-	  and very verbose statistics about TX and RX handler use
-	  and show them in debugfs.
 
-	  If unsure, say N.
+config MAC80211_IBSS_DEBUG
+	bool "Support for IBSS testing"
+	depends on MAC80211_DEBUG
+	---help---
+	  Say Y here if you intend to debug the IBSS code.
+
+config MAC80211_VERBOSE_PS_DEBUG
+	bool "Verbose powersave mode debugging"
+	depends on MAC80211_DEBUG
+	---help---
+	  Say Y here to print out verbose powersave
+	  mode debug messages.
+
+config MAC80211_VERBOSE_MPL_DEBUG
+	bool "Verbose mesh peer link debugging"
+	depends on MAC80211_DEBUG && MAC80211_MESH
+	---help---
+	  Say Y here to print out verbose mesh peer link
+	  debug messages.
 
 config MAC80211_VERBOSE_SPECT_MGMT_DEBUG
 	bool "Verbose Spectrum Management (IEEE 802.11h)debugging"
